--- a/templates/index.html
+++ b/templates/index.html
@@ -18,15 +18,15 @@
 <div></div>
 
 <div>
-  <p>Input a start number and an end number to return a list of <div class="form-group">
-  </div> numbers within that range</p>
   <form action="/aliRange" method="POST">
     <div class="form-group">
+      <p>Input a start number and an end number to return a list of...</p>
       <select class="form-control" action="/aliRange" name="aliquot" method="POST">
         <option value = 'abundant'>Abundant</option>
         <option value = 'perfect'>Perfect</option>
         <option value = 'deficient'>Deficient</option>
       </select>
+      <p>...numbers wtihin that range</p>
       Start: <input type="text" name="start" value="1">
       End: <input type="text" name="end" value="1">
     </div>
